# HShell

./: HShell.cabal  README.md  app.manifest  build.bat  resources.rc  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Framework/: TEA.hs
src/Framework/TEA/: Internal.hs
src/Graphics/: GUI.hs
src/Graphics/GUI/: Component.hs  DSL.hs  Foreign.hs  Internal.hs
src/Graphics/GUI/Component/: Button.hs  Window.hs
src/Graphics/GUI/Component/Button/: DSL.hs  Property.hs
src/Graphics/GUI/Component/Window/: DSL.hs  Property.hs
